--- a/edu/src/Components/Course/Course.scss
+++ b/edu/src/Components/Course/Course.scss
@@ -9,7 +9,9 @@
   box-shadow: 0px 0px 4.53648px rgba(35, 18, 117, 0.12),
     0px 25.7067px 30.2432px -15.1216px rgba(35, 18, 117, 0.18);
   background-color: $white;
+  margin-left: 10px;
   cursor: pointer;
+  margin-bottom: 50px;
 
   img {
     width: 260px;
