--- a/edu/src/Sections/NewsLetter/newsletter.styles.scss
+++ b/edu/src/Sections/NewsLetter/newsletter.styles.scss
@@ -73,8 +73,13 @@
 
 @media screen and (max-width: 400px) {
   .newsletter__container {
-    padding: 30px;
-    max-width: 75%;
+    .header {
+      width: 100%;
+      // display: flex;
+      // flex-direction: row;
+    }
+    padding: 20px;
+    // max-width: 100%;
     .newsletter__inputs {
       flex-direction: column;
     }
