--- a/edu/src/Components/Course/Course.scss
+++ b/edu/src/Components/Course/Course.scss
@@ -12,7 +12,7 @@
   margin-left: 10px;
   cursor: pointer;
   margin-bottom: 50px;
-
+  margin-top: 10px;
   img {
     width: 260px;
     height: 160px;
@@ -43,6 +43,7 @@
       p {
         font-size: 13px;
         margin: 0;
+        color: #b5b5c3;
       }
     }
   }
@@ -74,6 +75,69 @@
       svg {
         font-size: 30px;
         transition: all ease-in-out 0.3s;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .lesson__container {
+    width: 175px;
+    height: 185px;
+
+    padding: 10px;
+    // margin-left: 10px;
+    // margin-bottom: 50px;
+
+    img {
+      width: 100%;
+      height: 95px;
+    }
+    .lesson__info {
+      width: 100%;
+      padding-top: 10px;
+      .lesson__title {
+        color: $lesson_color;
+        font-size: $p_small;
+        display: flex;
+        align-self: flex-start;
+        font-weight: bold;
+      }
+      .lesson__rating {
+        display: flex;
+        flex-direction: column;
+        color: $rating_color;
+        font-weight: 500;
+
+        span {
+          font-size: 14px;
+        }
+        p {
+          font-size: 10px;
+          margin: 0;
+          font-weight: 500;
+          color: #b5b5c3;
+        }
+      }
+    }
+    .course__btn {
+      padding: 10px 20px;
+      width: 100%;
+
+      button {
+        width: 100%;
+        height: 33px;
+        padding: 0 15px;
+        cursor: pointer;
+        font-size: 11px;
+        &:hover > svg {
+          transition: all ease-in-out 0.3s;
+          transform: translateX(10px);
+        }
+        svg {
+          font-size: 18px;
+          transition: all ease-in-out 0.3s;
+        }
       }
     }
   }
