--- a/edu/src/Sections/Categories/categories.styles.scss
+++ b/edu/src/Sections/Categories/categories.styles.scss
@@ -193,6 +193,11 @@
 
 @media screen and (max-width: 400px) {
   .category__section {
+    .headers {
+      h2 {
+        font-size: 16px !important;
+      }
+    }
     .filter__search {
       .search {
         width: 190px !important;
@@ -215,6 +220,15 @@
     .select__container {
       select {
         font-size: $select_sm !important;
+      }
+    }
+  }
+}
+@media screen and (max-width: 305px) {
+  .category__section {
+    .headers {
+      h2 {
+        font-size: 14px !important;
       }
     }
   }
