--- a/edu/src/Sections/Header/header.styles.scss
+++ b/edu/src/Sections/Header/header.styles.scss
@@ -189,7 +189,8 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding-top: 30px;
+  padding-top: 40px;
+
   input {
     border: 3px solid transparent;
     background-color: transparent;
@@ -200,8 +201,8 @@
     );
     border-image-slice: 3;
     height: 120px;
-    width: 300px;
-    height: 50px;
+    width: 295px;
+    height: 38px;
     padding-left: 10px;
     border-radius: 6px;
     outline: none;
@@ -212,14 +213,15 @@
     }
   }
   button {
-    width: 70px;
-    height: 58px;
+    width: 52px;
+    height: 45px;
     background-color: $gold;
     border: none;
     border-radius: 6px;
     cursor: pointer;
     img {
-      width: 40px;
+      width: 25px;
+      height: 25px;
     }
   }
 }
@@ -240,10 +242,17 @@
 // }
 
 @media screen and (max-width: 768px) {
+  .header__inputs__mobile {
+    display: flex;
+  }
   .header__container {
     flex-direction: column;
+
     .header__phrase {
       width: 70%;
+      .header__inputs {
+        display: none;
+      }
       .subtitle {
         width: 100% !important;
         margin: 0 auto;
@@ -254,7 +263,19 @@
     }
   }
 }
-
+@media screen and (max-width: 450px) {
+  .header__container {
+    .header__inputs__mobile {
+      // display: none;
+      width: 90%;
+      display: flex;
+      margin: 0 !important;
+      input::placeholder {
+        font-size: 11px;
+      }
+    }
+  }
+}
 @media screen and (max-width: 550px) {
   .header__container {
     padding-right: 0px;
