--- a/edu/src/Sections/OurCourses/ourCourses.styles.scss
+++ b/edu/src/Sections/OurCourses/ourCourses.styles.scss
@@ -29,13 +29,14 @@
     margin: 0 auto;
     .inner__carousel {
       margin: 30px 0;
-      border-radius: 24px;
+      border-radius: 25px;
       max-width: 1300px;
     }
     .lesson__header {
       display: flex;
       justify-content: space-between;
       padding: 0 80px;
+      height: 30px;
       align-items: center;
       border: 2px dashed #b5b5c3;
       border-radius: 20px;
@@ -48,7 +49,7 @@
         font-size: $lesson_header_size;
         color: $darkblue;
         font-weight: 700;
-        margin-top: -45px;
+        margin-top: -70px;
         background-color: $white;
         transform: translate(30px);
       }
@@ -58,9 +59,12 @@
         text-decoration: underline;
         font-weight: 500;
         line-height: 120%;
-        margin-top: -50px;
+        margin-top: -78px;
         transform: translate(-30px);
         background-color: $white;
+        a {
+          color: $accentblue;
+        }
       }
     }
   }
@@ -105,6 +109,14 @@
           // width: 100%;
 
           min-width: 1200px;
+          @media screen and (max-width: 600px) {
+            min-width: auto;
+            width: 620px !important;
+          }
+          // @media screen and (max-width: 480px) {
+          //   min-width: auto;
+          //   width: 420px;
+          // }
         }
       }
     }
@@ -139,9 +151,11 @@
         .lesson__header {
           h1 {
             font-size: 18px;
+            margin: 0;
           }
           span {
             font-size: 13px;
+            margin: 0;
           }
         }
       }
