--- a/edu/src/Sections/Footer/Footer.styles.scss
+++ b/edu/src/Sections/Footer/Footer.styles.scss
@@ -1,4 +1,24 @@
 @import "../../variables.scss";
+.wtf {
+  // display: none;
+  color: white;
+}
+.css-b62m3t-container {
+  width: 150px;
+  border: none !important;
+  outline: none;
+  background-color: transparent !important;
+
+  .css-1s2u09g-control {
+    background-color: transparent;
+    border: none;
+  }
+}
+.select__option {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .bottom__section {
   display: flex;
   justify-content: space-between;
