--- a/edu/src/Sections/Header/header.styles.scss
+++ b/edu/src/Sections/Header/header.styles.scss
@@ -218,6 +218,7 @@
     background-color: $gold;
     border: none;
     border-radius: 6px;
+    padding: 10px;
     cursor: pointer;
     img {
       width: 25px;
