--- a/edu/src/Components/Course/Course.scss
+++ b/edu/src/Components/Course/Course.scss
@@ -13,10 +13,27 @@
   cursor: pointer;
   margin-bottom: 50px;
   margin-top: 10px;
+  position: relative;
   img {
     width: 260px;
     height: 160px;
     border-radius: 5px;
+  }
+  .heart {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3f6f9;
+    right: 20px;
+    top: 15px;
+    border-radius: 6px;
+    img {
+      width: 15px;
+      height: 15px;
+    }
   }
   .lesson__info {
     display: flex;
@@ -92,6 +109,22 @@
     img {
       width: 100%;
       height: 95px;
+    }
+    .heart {
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f3f6f9;
+      right: 20px;
+      top: 15px;
+      border-radius: 6px;
+      svg {
+        width: 12px;
+        height: 12px;
+      }
     }
     .lesson__info {
       width: 100%;
