--- a/edu/src/_variables.scss
+++ b/edu/src/_variables.scss
@@ -2,6 +2,7 @@
 $darkblue: #011f44;
 $accentblue: #36c0f4;
 $nav_title: #43d7fa;
+$blue: #00a3ff;
 $gold: #ffc542;
 $white: #fff;
 $grey: #b5b5c3cc;
@@ -33,6 +34,7 @@ $header_s: 30px;
 $header_xs: 24px;
 $header_weight: 700;
 //normal text
+$p_lg: 22px;
 $p_size: 16px;
 $p_small: 14px;
 $p_xs: 12px;
