--- a/edu/src/Sections/ChangePassword/ChangePassword.styles.scss
+++ b/edu/src/Sections/ChangePassword/ChangePassword.styles.scss
@@ -1,6 +1,8 @@
 @import "../../variables.scss";
-.signup__container {
+
+.reset__container {
   display: flex;
+
   .welcome__container {
     display: flex;
     align-items: center;
@@ -8,7 +10,6 @@
     background: linear-gradient(200.07deg, #59cbf7 -9.14%, #2db6ea 100%);
     min-width: 650px;
     max-width: 650px;
-
     text-align: center;
     padding: 20px;
     min-height: calc(100vh - 40px);
@@ -33,15 +34,17 @@
       }
     }
   }
-  .inner__login {
+  .reset__password {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
     align-items: center;
     width: 100%;
-    // min-height: 100%;
+    // min-height: 100vh;
+    justify-content: center;
     // height: 800px;
+    min-height: calc(100vh - 40px);
+
     h1 {
       color: #181c32;
       font-size: $header_s;
@@ -49,11 +52,12 @@
     }
     p {
       margin: 0;
+      text-align: center;
       color: $grey;
       font-size: 18px;
       font-weight: 500;
       span {
-        color: $blue;
+        color: #181c32;
         font-weight: 700;
       }
     }
@@ -62,30 +66,29 @@
       font-size: 14px;
     }
     .inputs {
-      width: 390px;
-      //   height: 600px;
+      width: 480px;
+      // height: 410px;
       padding: 10px;
       color: #181c32;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      .agree__condition {
-        padding: 0 20px;
-        display: flex;
-        align-items: center;
-        gap: 20px;
+      gap: 35px;
+      align-items: center;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      border-radius: 15px;
+
+      .resend {
+        font-size: 16px;
+        margin-top: -30px;
+        font-weight: 500;
+        color: #5e6278;
+        padding: 10px 20px;
         span {
-          font-weight: 500;
-          font-size: 14px;
-          span {
-            color: $blue;
-            font-weight: 600;
-          }
+          color: #00a3ff;
         }
-        input {
-          width: 20px;
-          background-color: #eff2f5;
-        }
+      }
+      h1 {
+        text-align: center;
       }
       button {
         cursor: pointer;
@@ -97,6 +100,7 @@
         border-radius: 6px;
         border: none;
         outline: none;
+        padding: 0 20px;
       }
       .email {
         display: flex;
@@ -121,7 +125,7 @@
       }
       .signin__btn {
         button {
-          width: 100%;
+          width: 180px;
           height: 48px;
           display: flex;
           background-color: $blue;
@@ -141,7 +145,6 @@
         display: flex;
         border-top: 1px solid #eff2f5;
         justify-content: center;
-        margin: 15px 0;
         span {
           background-color: #fff;
           margin-top: -15px;
@@ -174,8 +177,8 @@
       padding: 20px;
       width: 380px;
       font-weight: 600;
-      // height: 100;
       color: $grey;
+      justify-self: flex-end;
       align-items: flex-end;
       span {
         cursor: pointer;
@@ -184,8 +187,8 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
-  .signup__container {
+@media screen and (max-width: 1250px) {
+  .reset__container {
     .welcome__container {
       min-width: auto;
     }
@@ -193,11 +196,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  .signup__container {
+  .reset__container {
     .welcome__container {
       display: none;
     }
-    .inner__login {
+    .reset__password {
       h1 {
         font-size: $header_xs;
       }
@@ -211,6 +214,10 @@
       }
       .inputs {
         padding-top: 35px;
+
+        input {
+          max-width: 80%;
+        }
         .password {
           .header {
             padding: 5px 10px;
@@ -235,8 +242,8 @@
 }
 
 @media screen and (max-width: 460px) {
-  .signup__container {
-    .inner__login {
+  .reset__container {
+    .reset__password {
       .inputs {
         width: 90%;
         margin: 0 auto;
@@ -245,7 +252,7 @@
         }
       }
     }
-    .inner__login .terms {
+    .reset__password .terms {
       width: 80%;
       margin: 0 auto;
       font-size: 14px;
