--- a/edu/src/Sections/Login/Login.styles.scss
+++ b/edu/src/Sections/Login/Login.styles.scss
@@ -8,12 +8,11 @@
     flex-direction: column;
     background: linear-gradient(200.07deg, #59cbf7 -9.14%, #2db6ea 100%);
     min-width: 650px;
-    // width: 650px;
-    text-align: center;
-    height: 880px;
-    padding: 20px;
+    max-width: 650px;
 
-    padding-top: 100px;
+    text-align: center;
+    padding: 20px;
+    min-height: calc(100vh - 40px);
     h1 {
       color: #181c32;
       font-size: $header_s;
@@ -44,6 +43,9 @@
     width: 100%;
     // min-height: 100%;
     // height: 800px;
+    a {
+      text-decoration: none;
+    }
     h1 {
       color: #181c32;
       font-size: $header_s;
@@ -80,6 +82,7 @@
         background: #f5f8fa;
         border-radius: 6px;
         border: none;
+        padding: 0 20px;
         outline: none;
       }
       .email {
