--- a/edu/src/app.styles.scss
+++ b/edu/src/app.styles.scss
@@ -1,8 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;200;300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "./variables";
+
 body {
   margin: 0;
   padding: 0;
 }
 * {
   font-family: "Poppins", sans-serif !important;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.btn__primary {
+  background-color: $blue;
+  color: $white;
+  font-weight: bold;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  width: 100px;
+  height: 48px;
+  padding: 10px;
+  font-size: 16px;
 }
