--- a/edu/src/Sections/Signup/signup.styles.scss
+++ b/edu/src/Sections/Signup/signup.styles.scss
@@ -1,5 +1,6 @@
 @import "../../variables.scss";
 .signup__container {
+  padding-top: 90px;
   display: flex;
   .welcome__container {
     display: flex;
