--- a/edu/src/Sections/Login/Login.styles.scss
+++ b/edu/src/Sections/Login/Login.styles.scss
@@ -2,6 +2,7 @@
 
 .login__container {
   display: flex;
+  padding-top: 90px;
   .welcome__container {
     display: flex;
     align-items: center;
