--- a/edu/src/Sections/PasswordChanged/PasswordChanged.styles.scss
+++ b/edu/src/Sections/PasswordChanged/PasswordChanged.styles.scss
@@ -18,7 +18,16 @@
     p {
       color: #b5b5c3;
       font-weight: 500;
+      //   font-size: 16px;
       font-size: $p_lg;
+    }
+    .not_received {
+      font-size: 16px;
+      padding-top: 20px;
+    }
+    span {
+      color: $blue;
+      font-size: 16px;
     }
   }
   .img {
